# Mk.03-Rust-CivilizationSimulator

./: .gitignore  Cargo.toml  LICENSE
src/: main.rs  ui.rs
src/simulation/: blocs.rs  components.rs  events.rs  grid.rs  localization.rs  mod.rs  nation.rs  observer.rs  resources.rs  technology.rs  world.rs
src/simulation/systems/: ai.rs  blocs.rs  civilization.rs  climate.rs  cosmic.rs  cycles.rs  demography.rs  diplomacy.rs  economy.rs  environment.rs  events.rs  flood.rs  ideology.rs  logging.rs  missions.rs  mod.rs  movement.rs  nuclear.rs  peace.rs  richness.rs  security.rs  supply.rs  technology.rs  territory.rs  victory.rs  warfare.rs  warfatigue.rs
src/ui/: charts.rs  control.rs  map.rs  panels.rs
