[package]
name = "mk3_rust_studio"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
bevy_ecs = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
rand = { version = "0.8", features = ["small_rng"] }
axum = { version = "0.7", features = ["json"] }
colored = "2"
ratatui = { version = "0.26.1", features = ["crossterm"] }
crossterm = "0.27.0"
